# hy-kube

main/: .gitignore  create-pv.sh
main/manifests/: ingress.yaml  persistentvolume.yaml  persistentvolumeclaim.yaml  ping-pong-deployment.yaml  uuid-deployment.yaml  uuid-service.yaml
main/pingpong/: Cargo.toml  Dockerfile  docker-build.sh
main/pingpong/manifests/: deployment.yaml  ingress.yaml  service.yaml
main/pingpong/src/: main.rs
main/uuid-reader/: .gitignore  Cargo.toml  Dockerfile  docker-build.sh
main/uuid-reader/src/: main.rs
main/uuid-writer/: .gitignore  Cargo.toml  Dockerfile  docker-build.sh
main/uuid-writer/src/: main.rs
project/crudster/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-build.sh
project/crudster/manifests/: deployment.yaml  ingress.yaml  service.yaml
project/crudster/src/: main.rs
project/todo-front/: package.json
project/todo-front/src/: App.tsx
