[package]
name = "uuid-reader"
version = "0.1.0"
authors = ["Vili Heikkilä <vili.heikkila@solita.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"
rocket = "0.4.5"
